Included static files, templates, if and for blocks

--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,7 +1,6 @@
 <header class="main-header-container">
     <div class="main-header container">
-        <a class="main-logo" href="/">
-
+        <a class="main-logo" href="{% url 'recipes:home' %}">
             <i class="fas fa-utensils main-logo-icon"></i>
             <h3 class="main-logo-text"> Recipes</h3>
         </a>
