--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -1,27 +1,11 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
+{% extends 'global/base.html' %}
 
+{% block title %}Home | {% endblock title %}
 
-{% include  'recipes/partials/head.html'%}
-
-<body>
-    {% include  'recipes/partials/header.html'%}
-    {% include  'recipes/partials/search.html'%}
-
-    <main class="main-content-container">
-        <div class="main-content main-content-list container">
+{% block content %}
+    <div class="main-content main-content-list container">
+        {% for recipe in recipes %}
             {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-            {% include  'recipes/partials/recipe.html'%}
-        </div>
-    </main>
-    {% include 'recipes/partials/footer.html'%}
-</body>
-
-</html>
+        {% endfor %}
+    </div>
+{% endblock content %}
